# decks-tool

./: Dockerfile  README.md  pyproject.toml
decks_tool/: Main.py  config.yaml  decks_tool.py
decks_tool/pages/: Viewer.py  edit_deck.py  new_deck.py
decks_tool/utils/: auth.py
